<?xml version="1.0"?>
<package format="2">
  <name>angles</name>
  <version>0.0.0</version>
  <description>
    The goal is to be able to compile (some/most/all) ROS1 code in ROS2.
  </description>
  <maintainer email="mquigley@osrfoundation.org">Morgan Quigley</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

