<?xml version="1.0"?>
<package format="2">
  <name>roscpp</name>
  <version>0.0.0</version>
  <description>
    The goal is to be able to compile (some/most/all) ROS1 code in ROS2.
  </description>
  <maintainer email="mquigley@osrfoundation.org">Morgan Quigley</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rmw_implementation_cmake</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rostime</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rostime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

